weird issues with loader not showing adjusted css

--- a/front-end/src/components/UI/Loader/Loader.module.css
+++ b/front-end/src/components/UI/Loader/Loader.module.css
@@ -1,67 +1,35 @@
-.Loader,
-.Loader:before,
-.Loader:after {
-  border-radius: 50%;
-}
-.Loader {
-  color: #521751;
-  font-size: 11px;
-  text-indent: -99999em;
-  margin: 55px auto;
+.ldsRing {
+  display: inline-block;
   position: relative;
-  width: 10em;
-  height: 10em;
-  box-shadow: inset 0 0 0 1em;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
+  width: 80px;
+  height: 80px;
 }
-.Loader:before,
-.Loader:after {
+.ldsRing div {
+  box-sizing: border-box;
+  display: block;
   position: absolute;
-  content: '';
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: ldsRing 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
 }
-.Loader:before {
-  width: 5.2em;
-  height: 10.2em;
-  background: #fff;
-  border-radius: 10.2em 0 0 10.2em;
-  top: -0.1em;
-  left: -0.1em;
-  -webkit-transform-origin: 5.2em 5.1em;
-  transform-origin: 5.2em 5.1em;
-  -webkit-animation: load2 2s infinite ease 1.5s;
-  animation: load2 2s infinite ease 1.5s;
+.ldsRing div:nth-child(1) {
+  animation-delay: -0.45s;
 }
-.Loader:after {
-  width: 5.2em;
-  height: 10.2em;
-  background: #fff;
-  border-radius: 0 10.2em 10.2em 0;
-  top: -0.1em;
-  left: 5.1em;
-  -webkit-transform-origin: 0px 5.1em;
-  transform-origin: 0px 5.1em;
-  -webkit-animation: load2 2s infinite ease;
-  animation: load2 2s infinite ease;
+.ldsRing div:nth-child(2) {
+  animation-delay: -0.3s;
 }
-@-webkit-keyframes load2 {
+.ldsRing div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes ldsRing {
   0% {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes load2 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
